--- a/BelajarIntent/app/src/main/res/layout/activity_intent.xml
+++ b/BelajarIntent/app/src/main/res/layout/activity_intent.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center_vertical">
+    android:gravity="center_vertical">
 
     <TextView
         android:id="@+id/text1"
